--- a/Proje/Sehrim.html
+++ b/Proje/Sehrim.html
@@ -3,7 +3,8 @@
 
 <head>
 
-	<title>Hakkımda</title>
+	<title>Şehrim</title>
+	<link rel="icon" href="logo.jpg">
 
 	<meta charset="utf-8">
 
@@ -27,33 +28,85 @@
 
 <body>
 
-	<div class="jumbotron text-center">
-		<div class="row">
-			<div class="col-sm-4"></div>
-			<div class="col-sm-4" style="background-color: rgb(184, 184, 184); border-radius: 20px;">
-				<h1 class="AnaBaslik">
-					Furkan Cebar
-				</h1>
+	<div class="baslik row justify-content-center">
+		<div class="col-4 text-center">
+			<h1>
+				Furkan Cebar
+			</h1>
 
-				<h3 class="YanBaslik">
-					Kişisel Web Sitesi
+			<h3>
+				Kişisel Web Sitesi
+			</h3>
+		</div>
+	</div>
+
+	<div class="navbar justify-content-center">
+		<a href="Anasayfa.html" class="btn">Anasayfa</a>
+		<a href="#" class="btn btn-secili">Şehrim</a>
+		<a href="Hakkimda.html" class="btn">Hakkımda</a>
+		<a href="CV.html" class="btn">CV</a>
+		<a href="Iletisim.html" class="btn">İletişim</a>
+		<a href="Login.html" class="btn">Giriş</a>
+	</div>
+
+
+	<div class="icerik-kutusu container">
+		<div class="row">
+			<div class="col-sm-3">
+				<img class="img-fluid rounded" src="logo.jpg">
+			</div>
+			<div class="col-sm-9">
+				<h3>
+					Bursa Neresidir?
 				</h3>
+				<p>
+					Marmara Bölgesinin Balıkesir, Kütahya, Bilecik, Sakarya, İzmit ve Yalova ile komşu
+					olan tarihi yerleri ile ön plana çıkan bir kentimizdir Bursa.Uygarlıklar beşiği
+					olan Anadolunun cennet kentlerinden biri olan Yeşil Bursamızın yerleşim tarihi M.Ö
+					4 yüzyıla dayanmaktadır.Osmanlı İmparatorluğu'nun temelleri de Bursa kentinde
+					atıldığından Bursa tarihi yapılar bakımından oldukça zengingir.Coğrafi olarak Bursa
+					ilimizde yeşil renginin her tonunu bulmak mümkündür. 2.900 milyona yaklaşan Bursa
+					Nüfusu ile de Türkiye'in en büyük 4.şehridir. <br>
+					Bursa Nüfusu'nun büyük çoğunluğu Bursa'nın Merkez ilçeleri olan Osmangazi, Nilüfer
+					ve Yıldırım ilçelerinde ikamet etmektedir.Bursa Nüfusu'nun yoğunluk yaşadığı diğer
+					ilçeler ise Türkiye'nin mobilya kentlerinden olan İnegöl ve Bursa'nın en önemli
+					limanına ev sahipliği yaptığı Gemlik İlçeleri.Kış turizminin ülkemizdeki en
+					önemli kayak merkezi olan Uludağ, Avrupa'nın da önemli kayak merkezlerinden
+					biri konumundadır.Marmara denizine olan kıyı şeridinden dolayı yaz aylarında
+					da yaz turizmi açısından oldukça önemlidir.Dünyaca ünlü şifalı termal suları
+					ve Bursa hamamları ile de gözbebeği olan bir kenttir.Bursa ilimiz Türkiyenin
+					en büyük sanayii şehirlerinden biri olduğundan şehir merkezide oldukça
+					fazla ziyaretçi akınına uğramaktadır. İstanbul'a da oldukça yakın mesafede
+					bulunan Bursa coğrafi ve tarihi öneminden dolayı 12 ay boyunca ziyaretçi
+					akınına uğrayan ender illerimizden biridir. Bursa Büyükşehir Belediyesi ve Bursa
+					Valiliğinin yapmış olduğu doğru atılımlar sayesinde her geçen yıl ziyaretçi sayısını
+					katlamaktadır.Bursa Termal Otelleri, pansiyonları ile yerli ve yabancı turistlerce
+					rağbet görmektedir.Termal Turizmi için çok fazla tercih edilen şehirde;önemli
+					Kaplıcaları ise,Şehir merkezinde buluna Bursa Kaplıcaları ve şifalı suları,Eski
+					Kaplıca,Yeni Kaplıca,Kara Mustafa Hamamı,Kükürtlü Kaplıcaları,Emir Sultan Hamamı,
+					Eyne Hamamı,Hanzade Hamamı,Timurtaş Hamamı,Mustafakemalpaşa ilçesinde bulunan
+					Tumbuldek Kaplıcaları ve İnegöl'de bulunan Oylat Kaplıcaları bunların en
+					önemlilerindendir.
+				</p>
 			</div>
 		</div>
-
 	</div>
-	<nav class="navbar navbar-expand-sm">
-		<div class="container">
-			<a href="Anasayfa.html" class="btn">Anasayfa</a>
-			<a href="#" class="btn btn-secili">Şehrim</a>
-			<a href="Hakkimda.html" class="btn">Hakkımda</a>
-			<a href="CV.html" class="btn">CV</a>
-			<a href="Iletisim.html" class="btn">İletişim</a>
-			<a href="Login.html" class="btn">Giriş</a>
-		</div>
-	</nav>
 
-	<br>
+	<div class="icerik-kutusu container">
+		<div class="row">
+			<div class="col-sm-9">
+				<h3>
+					Başlık
+				</h3>
+				<p>
+					içerik
+				</p>
+			</div>
+			<div class="col-sm-3">
+				<img class="img-fluid rounded" src="logo.jpg">
+			</div>
+		</div>
+	</div>
 
 
 	<div class="text-center" style="margin-bottom: 0;">© 2019-2020 Furkan CEBAR</div>
