--- a/Proje/template.html
+++ b/Proje/template.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>Hakkımda</title>
+	<title></title>
 	<link rel="icon" href="logo.jpg">
 
 	<meta charset="utf-8">
@@ -43,7 +43,7 @@
 	<div class="navbar justify-content-center">
 		<a href="Anasayfa.html" class="btn">Anasayfa</a>
 		<a href="Sehrim.html" class="btn">Şehrim</a>
-		<a href="#" class="btn btn-secili">Hakkımda</a>
+		<a href="Hakkimda.html" class="btn">Hakkımda</a>
 		<a href="CV.html" class="btn">CV</a>
 		<a href="Iletisim.html" class="btn">İletişim</a>
 		<a href="Login.html" class="btn">Giriş</a>
@@ -56,12 +56,10 @@
 			</div>
 			<div class="col-sm-9">
 				<h3>
-					Hakkımda
+					Başlık
 				</h3>
 				<p>
-					Merhaba, Benim adım Furkan Cebar. Sakarya Üniversitesi Bilgisayar Mühendisliği
-					bölümünde okuyorum. Web Teknolojileri Projesi olarak tasarladığım Web sitesine
-					Hoşgeldiniz. <br>
+					içerik
 				</p>
 			</div>
 		</div>
