--- a/Proje/Anasayfa.html
+++ b/Proje/Anasayfa.html
@@ -3,7 +3,8 @@
 
 <head>
 
-	<title>İletişim</title>
+	<title>Ana Sayfa</title>
+	<link rel="icon" href="logo.jpg">
 
 	<meta charset="utf-8">
 
@@ -19,79 +20,70 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-	<!--Heading Font-->
 	<link href="https://fonts.googleapis.com/css?family=Modak&display=swap" rel="stylesheet">
 
 	<link href="style.css" rel="stylesheet">
 
 </head>
 
-<body style="background-color: #0C0F13;">
+<body>
 
-	<div class="jumbotron text-center">
-		<div class="row">
-				<div class="col-sm-4"></div>
-		<div class="col-sm-4" style="background-color: rgb(184, 184, 184); border-radius: 20px;">
-			<h1 class="AnaBaslik">
+	<div class="baslik row justify-content-center">
+		<div class="col-4 text-center">
+			<h1>
 				Furkan Cebar
 			</h1>
 
-			<h3 class="YanBaslik">
-			Kişisel Web Sitesi
+			<h3>
+				Kişisel Web Sitesi
 			</h3>
-		</div>	
-		</div>
-
-	</div>
-<nav class="navbar navbar-expand-sm">
-	<div class="container">
-			<a href="#" class="btn btn-secili">Anasayfa</a>
-			<a href="Sehrim.html" class="btn">Şehrim</a>
-			<a href="Hakkimda.html" class="btn">Hakkımda</a>
-			<a href="CV.html" class="btn">CV</a>
-			<a href="Iletisim.html" class="btn">İletişim</a>
-			<a href="Login.html" class="btn">Giriş</a>
-	</div>
-</nav>	
-
-	<br>
-
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-4">
-				<img class="img-fluid rounded" src="logo.jpg">
-			</div>
-			<div class="col-sm-4">
-				<h3>
-					Hakkımda
-				</h3>
-				<p>
-					Hakkımdan sayfasından kısa bir bilgi
-				</p>
-			</div>
 		</div>
 	</div>
-	<br>
-	<div class="container">
+
+	<div class="navbar justify-content-center">
+		<a href="#" class="btn btn-secili">Anasayfa</a>
+		<a href="Sehrim.html" class="btn">Şehrim</a>
+		<a href="Hakkimda.html" class="btn">Hakkımda</a>
+		<a href="CV.html" class="btn">CV</a>
+		<a href="Iletisim.html" class="btn">İletişim</a>
+		<a href="Login.html" class="btn">Giriş</a>
+	</div>
+
+	<div class="icerik-kutusu container">
 		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<img class="img-fluid rounded" src="logo.jpg">
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-9">
 				<h3>
-					Şehrim
+					Merhaba, 
 				</h3>
 				<p>
-					Şehrim sayfasından kısa bir bilgi
+					  Benim adım Furkan Cebar. Sakarya Üniversitesi Bilgisayar Mühendisliği
+					bölümünde okuyorum. Web Teknolojileri Projesi olarak tasarladığım Web sitesine
+					Hoşgeldiniz.
 				</p>
 			</div>
 		</div>
 	</div>
 
-
+	<div class="icerik-kutusu container">
+		<div class="row">
+			<div class="col-sm-9">
+				<h3>
+					<a href="Hakkimda.html">Hakkımda</a>
+				</h3>
+				<p>
+					içerik
+				</p>
+			</div>
+			<div class="col-sm-3">
+				<img class="img-fluid rounded" src="logo.jpg">
+			</div>
+		</div>
+	</div>
 
 	<div class="text-center" style="margin-bottom: 0;">© 2019-2020 Furkan CEBAR</div>
-	</div>
 </body>
 
 </html>
