--- a/Proje/CV.html
+++ b/Proje/CV.html
@@ -3,7 +3,8 @@
 
 <head>
 
-	<title>İletişim</title>
+	<title>CV</title>
+	<link rel="icon" href="logo.jpg">
 
 	<meta charset="utf-8">
 
@@ -19,97 +20,89 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-	<!--Heading Font-->
 	<link href="https://fonts.googleapis.com/css?family=Modak&display=swap" rel="stylesheet">
 
 	<link href="style.css" rel="stylesheet">
 
 </head>
 
-<body style="background-color: #0C0F13;">
+<body>
 
-	<div class="jumbotron text-center">
-		<div class="row">
-				<div class="col-sm-4"></div>
-		<div class="col-sm-4" style="background-color: rgb(184, 184, 184); border-radius: 20px;">
-			<h1 class="AnaBaslik">
+	<div class="baslik row justify-content-center">
+		<div class="col-4 text-center">
+			<h1>
 				Furkan Cebar
 			</h1>
 
-			<h3 class="YanBaslik">
-			Kişisel Web Sitesi
+			<h3>
+				Kişisel Web Sitesi
 			</h3>
-		</div>	
 		</div>
-
 	</div>
-<nav class="navbar navbar-expand-sm">
-	<div class="container">
-			<a href="Anasayfa.html" class="btn">Anasayfa</a>
-			<a href="Sehrim.html" class="btn">Şehrim</a>
-			<a href="Hakkimda.html" class="btn">Hakkımda</a>
-			<a href="#" class="btn btn-secili">CV</a>
-			<a href="Iletisim.html" class="btn">İletişim</a>
-			<a href="Login.html" class="btn">Giriş</a>
+
+	<div class="navbar justify-content-center">
+		<a href="Anasayfa.html" class="btn">Anasayfa</a>
+		<a href="Sehrim.html" class="btn">Şehrim</a>
+		<a href="Hakkimda.html" class="btn">Hakkımda</a>
+		<a href="#" class="btn btn-secili">CV</a>
+		<a href="Iletisim.html" class="btn">İletişim</a>
+		<a href="Login.html" class="btn">Giriş</a>
 	</div>
-</nav>	
 
-	<br>
+	<div class="icerik-kutusu container">
+		<table class="table table-dark table-hover">
+			<tr style="background-color: rgb(51, 51, 51);">
+				<td>
+					<b>Öğrenim Seviyesi</b>
+				</td>
+				<td>
+					<b>Öğrenim Yeri</b>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Anaokul
+				</td>
+				<td>
+					Hatice Hakkı Kayan İlköğretim Okulu
+				</td>
+			</tr>
+			<tr>
+				<td>
+					İlkokul
+				</td>
+				<td>
+					Hatice Hakkı Kayan İlköğretim Okulu
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Ortaokul
+				</td>
+				<td>
+					Hatice Hakkı Kayan İlköğretim Okulu
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Lise
+				</td>
+				<td>
+					Osmangazi Gazi Anadolu Lisesi
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Üniversite
+				</td>
+				<td>
+					Sakarya Anadolu Lisesi (Bilgisayar Mühendisliği)
+				</td>
+			</tr>
+		</table>
+	</div>
 
-	<div class="container">
-	<table class="table table-dark table-hover">
-		<tr style="background-color: rgb(51, 51, 51);">
-			<td>
-				<b>Öğrenim Seviyesi</b>
-			</td>
-			<td>
-				<b>Öğrenim Yeri</b>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Anaokul
-			</td>
-			<td>
-				Hatice Hakkı Kayan İlköğretim Okulu
-			</td>
-		</tr>
-		<tr>
-			<td>
-				İlkokul
-			</td>
-			<td>
-				Hatice Hakkı Kayan İlköğretim Okulu
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Ortaokul
-			</td>
-			<td>
-				Hatice Hakkı Kayan İlköğretim Okulu
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Lise
-			</td>
-			<td>
-				Osmangazi Gazi Anadolu Lisesi
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Üniversite
-			</td>
-			<td>
-				Sakarya Anadolu Lisesi (Bilgisayar Mühendisliği)
-			</td>
-		</tr>
-	</table>
-</div>
 	<div class="text-center" style="margin-bottom: 0;">© 2019-2020 Furkan CEBAR</div>
-	</div>
 </body>
 
 </html>
