--- a/Proje/Iletisim.html
+++ b/Proje/Iletisim.html
@@ -4,6 +4,7 @@
 <head>
 
 	<title>İletişim</title>
+	<link rel="icon" href="logo.jpg">
 
 	<meta charset="utf-8">
 
@@ -19,47 +20,115 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-	<!--Heading Font-->
 	<link href="https://fonts.googleapis.com/css?family=Modak&display=swap" rel="stylesheet">
 
 	<link href="style.css" rel="stylesheet">
 
 </head>
 
-<body style="background-color: #0C0F13;">
+<body>
 
-	<div class="jumbotron text-center">
-		<div class="row">
-				<div class="col-sm-4"></div>
-		<div class="col-sm-4" style="background-color: rgb(184, 184, 184); border-radius: 20px;">
-			<h1 class="AnaBaslik">
+	<div class="baslik row justify-content-center">
+		<div class="col-4 text-center">
+			<h1>
 				Furkan Cebar
 			</h1>
 
-			<h3 class="YanBaslik">
-			Kişisel Web Sitesi
+			<h3>
+				Kişisel Web Sitesi
 			</h3>
-		</div>	
 		</div>
-
 	</div>
-<nav class="navbar navbar-expand-sm">
-	<div class="container">
-			<a href="Anasayfa.html" class="btn">Anasayfa</a>
-			<a href="Sehrim.html" class="btn">Şehrim</a>
-			<a href="Hakkimda.html" class="btn">Hakkımda</a>
-			<a href="CV.html" class="btn">CV</a>
-			<a href="#" class="btn btn-secili">İletişim</a>
-			<a href="Login.html" class="btn">Giriş</a>
+
+	<div class="navbar justify-content-center">
+		<a href="Anasayfa.html" class="btn">Anasayfa</a>
+		<a href="Sehrim.html" class="btn">Şehrim</a>
+		<a href="Hakkimda.html" class="btn">Hakkımda</a>
+		<a href="CV.html" class="btn">CV</a>
+		<a href="#" class="btn btn-secili">İletişim</a>
+		<a href="Login.html" class="btn">Giriş</a>
 	</div>
-</nav>	
 
-	<br>
-
-
+	<div class="icerik-kutusu container justify-content-center">
+		<form action="Gonder.php" method="POST">
+			<table style="background-color: antiquewhite;">
+				<tr>
+					<td>
+						İsim:
+					</td>
+					<td>
+						<input type="text" name="isim">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Soyisim:
+					</td>
+					<td>
+						<input type="text" name="soyisim">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Email:
+					</td>
+					<td>
+						<input type="email" required name="email">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Cinsiyetiniz:
+					</td>
+					<td>
+						<input type="radio" name="cinsiyet" value="erkek"> Erkek <br>
+						<input type="radio" name="cinsiyet" value="kiz"> Kiz
+					</td>
+				</tr>
+				<tr>
+					<td>
+						İletişim Sebebiniz:
+					</td>
+					<td>
+						<input type="radio" name="sebep" value="sikayet"> Şikayet <br>
+						<input type="radio" name="sebep" value="istek"> İstek <br>
+						<input type="radio" name="sebep" value="soru"> Soru <br>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Yaşınız:
+					</td>
+					<td>
+						<select name="yas">
+							<option value="10-19">10-19</option>
+							<option value="20-29">20-29</option>
+							<option value="30-39">30-39</option>
+							<option value="40-49">40-49</option>
+							<option value="50-59">50-59</option>
+							<option value="60-69">60-69</option>
+							<option value="70-79">70-79</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="2">
+						<textarea rows="5" cols="50" name="ileti"></textarea>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<button>Temizle</button>
+					</td>
+					<td>
+						<input type="submit">
+					</td>
+				</tr>
+			</table>
+		</form>
+	</div>
 
 	<div class="text-center" style="margin-bottom: 0;">© 2019-2020 Furkan CEBAR</div>
-	</div>
 </body>
 
 </html>
