--- a/Proje/Login.html
+++ b/Proje/Login.html
@@ -3,7 +3,8 @@
 
 <head>
 
-	<title>Hakkımda</title>
+	<title>Giriş</title>
+	<link rel="icon" href="logo.jpg">
 
 	<meta charset="utf-8">
 
@@ -27,37 +28,63 @@
 
 <body>
 
-	<div class="jumbotron text-center">
-		<div class="row">
-			<div class="col-sm-4"></div>
-			<div class="col-sm-4" style="background-color: rgb(184, 184, 184); border-radius: 20px;">
-				<h1 class="AnaBaslik">
-					Furkan Cebar
-				</h1>
+	<div class="baslik row justify-content-center">
+		<div class="col-4 text-center">
+			<h1>
+				Furkan Cebar
+			</h1>
 
-				<h3 class="YanBaslik">
-					Kişisel Web Sitesi
-				</h3>
+			<h3>
+				Kişisel Web Sitesi
+			</h3>
+		</div>
+	</div>
+
+	<div class="navbar justify-content-center">
+		<a href="Anasayfa.html" class="btn">Anasayfa</a>
+		<a href="Sehrim.html" class="btn">Şehrim</a>
+		<a href="Hakkimda.html" class="btn">Hakkımda</a>
+		<a href="CV.html" class="btn">CV</a>
+		<a href="Iletisim.html" class="btn">İletişim</a>
+		<a href="#" class="btn btn-secili">Giriş</a>
+	</div>
+
+	<div class="icerik-kutusu container">
+		<form action="Loginin.php" method="POST">
+			<div class="row">
+			<div class="col-sm-4"></div>
+			<div class="col-sm-4" style="background-color: rgb(184, 184, 184); border-radius: 6px; align-items: center;">
+				<br>
+				<table>
+					<tr>
+						<td>
+							Kullanıcı Adınız:
+						</td>
+						<td>
+							<input type="email" required name="mail" style="width: 250px;">
+						</td>
+					</tr>
+					<tr>
+						<td>
+							Şifre:
+						</td>
+						<td>
+							<input type="password" required name="password" style="width: 250px;">
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<input type="submit">
+						</td>
+					</tr>
+				</table>
+				<br>
 			</div>
 		</div>
-
+		</form>
 	</div>
-	<nav class="navbar navbar-expand-sm">
-		<div class="container">
-			<a href="Anasayfa.html" class="btn">Anasayfa</a>
-			<a href="Sehrim.html" class="btn">Şehrim</a>
-			<a href="Hakkimda.html" class="btn">Hakkımda</a>
-			<a href="CV.html" class="btn">CV</a>
-			<a href="Iletisim.html" class="btn">İletişim</a>
-			<a href="#" class="btn btn-secili">Giriş</a>
-		</div>
-	</nav>
-
-	<br>
-
 
 	<div class="text-center" style="margin-bottom: 0;">© 2019-2020 Furkan CEBAR</div>
-	</div>
 </body>
 
 </html>
