--- a/Proje/Sehrim.html
+++ b/Proje/Sehrim.html
@@ -108,6 +108,30 @@
 		</div>
 	</div>
 
+	<div class="icerik-kutusu container">
+		<div id="carousel" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+			  <div class="carousel-item active">
+				<img src="logo.jpg" width="1100" height="500">
+			  </div>
+			  <div class="carousel-item">
+				<img src="logo.jpg" width="1100" height="500">
+			  </div>
+			  <div class="carousel-item">
+				<img src="logo.jpg" width="1100" height="500">
+			  </div>
+			</div>
+			<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Next</span>
+			</a>
+		  </div>
+	</div>
+
 
 	<div class="text-center" style="margin-bottom: 0;">© 2019-2020 Furkan CEBAR</div>
 	</div>
