--- a/Proje/Hakkimda.html
+++ b/Proje/Hakkimda.html
@@ -59,9 +59,7 @@
 					Hakkımda
 				</h3>
 				<p>
-					Merhaba, Benim adım Furkan Cebar. Sakarya Üniversitesi Bilgisayar Mühendisliği
-					bölümünde okuyorum. Web Teknolojileri Projesi olarak tasarladığım Web sitesine
-					Hoşgeldiniz. <br>
+					Adım Furkan Cebar. 16 Nisan 2001'de Bursa'da dünyaya geldim. Annem, babam, abim ve benden oluşan çekirdek ailede yaşıyorum. <br>
 				</p>
 			</div>
 		</div>
@@ -71,10 +69,10 @@
 		<div class="row">
 			<div class="col-sm-9">
 				<h3>
-					Başlık
+					Hobilerim
 				</h3>
 				<p>
-					içerik
+					Bilgisayar oyunlarını oynamayı, bilim kurgu kitapları okumayı, yabancı dizi izlemeyi severim. 
 				</p>
 			</div>
 			<div class="col-sm-3">
