--- a/Proje/Sehrim.html
+++ b/Proje/Sehrim.html
@@ -66,7 +66,19 @@
 					4 yüzyıla dayanmaktadır.Osmanlı İmparatorluğu'nun temelleri de Bursa kentinde
 					atıldığından Bursa tarihi yapılar bakımından oldukça zengingir.Coğrafi olarak Bursa
 					ilimizde yeşil renginin her tonunu bulmak mümkündür. 2.900 milyona yaklaşan Bursa
-					Nüfusu ile de Türkiye'in en büyük 4.şehridir. <br>
+					Nüfusu ile de Türkiye'in en büyük 4.şehridir.
+				</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="icerik-kutusu container">
+		<div class="row">
+			<div class="col-sm-9">
+				<h3>
+					Bursa Neresidir?
+				</h3>
+				<p>
 					Bursa Nüfusu'nun büyük çoğunluğu Bursa'nın Merkez ilçeleri olan Osmangazi, Nilüfer
 					ve Yıldırım ilçelerinde ikamet etmektedir.Bursa Nüfusu'nun yoğunluk yaşadığı diğer
 					ilçeler ise Türkiye'nin mobilya kentlerinden olan İnegöl ve Bursa'nın en önemli
@@ -76,7 +88,26 @@
 					da yaz turizmi açısından oldukça önemlidir.Dünyaca ünlü şifalı termal suları
 					ve Bursa hamamları ile de gözbebeği olan bir kenttir.Bursa ilimiz Türkiyenin
 					en büyük sanayii şehirlerinden biri olduğundan şehir merkezide oldukça
-					fazla ziyaretçi akınına uğramaktadır. İstanbul'a da oldukça yakın mesafede
+					fazla ziyaretçi akınına uğramaktadır. 
+				</p>
+			</div>
+			<div class="col-sm-3">
+				<img class="img-fluid rounded" src="logo.jpg">
+			</div>
+		</div>
+	</div>
+
+	<div class="icerik-kutusu container">
+		<div class="row">
+			<div class="col-sm-3">
+				<img class="img-fluid rounded" src="logo.jpg">
+			</div>
+			<div class="col-sm-9">
+				<h3>
+					Bursa Neresidir?
+				</h3>
+				<p>
+					İstanbul'a da oldukça yakın mesafede
 					bulunan Bursa coğrafi ve tarihi öneminden dolayı 12 ay boyunca ziyaretçi
 					akınına uğrayan ender illerimizden biridir. Bursa Büyükşehir Belediyesi ve Bursa
 					Valiliğinin yapmış olduğu doğru atılımlar sayesinde her geçen yıl ziyaretçi sayısını
@@ -96,10 +127,10 @@
 		<div class="row">
 			<div class="col-sm-9">
 				<h3>
-					Başlık
+					Ulu Cami
 				</h3>
 				<p>
-					içerik
+					Bursa'nın en bilindik en öne çıkan yerlerinden biri de Ulu Cami'dir. Ulu camiyi tanıttığım sayfaya gitmek için <a href="UluCami.html">tıklayınız.</a>
 				</p>
 			</div>
 			<div class="col-sm-3">
