--- a/Proje/UluCami.html
+++ b/Proje/UluCami.html
@@ -1,1 +1,80 @@
-Bursa merkezinde bulunan Yıldırım Bayezıd tarafından 1396-1400 yılları arasında yaptırılmış olup dönemin alimlerinden Somuncu Baba'nın ilk cuma namazını kıldırdığı Ulucamii, Bursa kentinin sembol yapılarından bir tanesidir.Bursa Nüfusununda ibadet olarak en çok tercih ettiği Ulucamii,Bursa'nın merkezinde ve Bursa Kapalı Çarşı, Tophane, Zafer Plaza ile de aşağı yukarı aynı konumdadır.Dönemin astroloji çalışmasını da içinde bulunduran Ulucamii, Osmanlı mimarisinin güzel örneklerinden bir tanesi olmasından ötürü çok fazla ziyaretçi akınına uğrayan Ulucamii, görülmesi gereken Bursa'nın en önemli tarihi yapıtlarından başka bir tanesi.
+<!DOCTYPE html>
+<html lang="tr">
+
+<head>
+
+	<title>Ulu Cami</title>
+	<link rel="icon" href="logo.jpg">
+
+	<meta charset="utf-8">
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+	<!-- Popper JS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+	<link href="https://fonts.googleapis.com/css?family=Modak&display=swap" rel="stylesheet">
+
+	<link href="style.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+	<div class="baslik row justify-content-center">
+		<div class="col-4 text-center">
+			<h1>
+				Furkan Cebar
+			</h1>
+
+			<h3>
+				Kişisel Web Sitesi
+			</h3>
+		</div>
+	</div>
+
+	<div class="navbar justify-content-center">
+		<a href="Anasayfa.html" class="btn">Anasayfa</a>
+		<a href="#" class="btn btn-secili">Şehrim</a>
+		<a href="Hakkimda.html" class="btn">Hakkımda</a>
+		<a href="CV.html" class="btn">CV</a>
+		<a href="Iletisim.html" class="btn">İletişim</a>
+		<a href="Login.html" class="btn">Giriş</a>
+	</div>
+
+	<div class="icerik-kutusu container">
+		<div class="row">
+			<div class="col-sm-3">
+				<img class="img-fluid rounded" src="logo.jpg">
+			</div>
+			<div class="col-sm-9">
+				<h3>
+					Ulu Cami
+				</h3>
+				<p>
+					Bursa merkezinde bulunan Yıldırım Bayezıd tarafından 1396-1400 yılları arasında 
+					yaptırılmış olup dönemin alimlerinden Somuncu Baba'nın ilk cuma namazını kıldırdığı 
+					Ulucamii, Bursa kentinin sembol yapılarından bir tanesidir.Bursa Nüfusununda ibadet 
+					olarak en çok tercih ettiği Ulucamii,Bursa'nın merkezinde ve Bursa Kapalı Çarşı, 
+					Tophane, Zafer Plaza ile de aşağı yukarı aynı konumdadır.Dönemin astroloji çalışmasını 
+					da içinde bulunduran Ulucamii, Osmanlı mimarisinin güzel örneklerinden bir tanesi 
+					olmasından ötürü çok fazla ziyaretçi akınına uğrayan Ulucamii, görülmesi gereken 
+					Bursa'nın en önemli tarihi yapıtlarından başka bir tanesi.
+				</p>
+			</div>
+		</div>
+	</div>
+
+
+
+	<div class="text-center" style="margin-bottom: 0;">© 2019-2020 Furkan CEBAR</div>
+</body>
+
+</html>
