--- a/Proje/Anasayfa.html
+++ b/Proje/Anasayfa.html
@@ -61,7 +61,7 @@
 				<p>
 					  Benim adım Furkan Cebar. Sakarya Üniversitesi Bilgisayar Mühendisliği
 					bölümünde okuyorum. Web Teknolojileri Projesi olarak tasarladığım Web sitesine
-					Hoşgeldiniz.
+					Hoşgeldiniz. Hakkımda sayfasına gitmek için <a href="Hakkimda.html">tıklayınız.</a>
 				</p>
 			</div>
 		</div>
@@ -71,10 +71,10 @@
 		<div class="row">
 			<div class="col-sm-9">
 				<h3>
-					<a href="Hakkimda.html">Hakkımda</a>
+					Yaşadığım Şehir
 				</h3>
 				<p>
-					içerik
+					Bursa'da doğdum ve büyüdüm. Bursa hakkında daha fazla bilgi edinmek için <a href="Sehrim.html">tıklayınız.</a>
 				</p>
 			</div>
 			<div class="col-sm-3">
