--- a/Proje/Anasayfa.html
+++ b/Proje/Anasayfa.html
@@ -78,7 +78,7 @@
 				</p>
 			</div>
 			<div class="col-sm-3">
-				<img class="img-fluid rounded" src="logo.jpg">
+				<img class="img-fluid rounded" src="bursa_2.jpg">
 			</div>
 		</div>
 	</div>
