--- a/Proje/Hakkimda.html
+++ b/Proje/Hakkimda.html
@@ -52,7 +52,7 @@
 	<div class="icerik-kutusu container">
 		<div class="row">
 			<div class="col-sm-3">
-				<img class="img-fluid rounded" src="logo.jpg">
+				<img class="img-fluid rounded" src="me.jpg">
 			</div>
 			<div class="col-sm-9">
 				<h3>
@@ -76,7 +76,7 @@
 				</p>
 			</div>
 			<div class="col-sm-3">
-				<img class="img-fluid rounded" src="logo.jpg">
+				<img class="img-fluid rounded" src="hobby.jpg">
 			</div>
 		</div>
 	</div>
