--- a/Proje/Sehrim.html
+++ b/Proje/Sehrim.html
@@ -53,7 +53,7 @@
 	<div class="icerik-kutusu container">
 		<div class="row">
 			<div class="col-sm-3">
-				<img class="img-fluid rounded" src="logo.jpg">
+				<img class="img-fluid rounded" src="bursa_4.png">
 			</div>
 			<div class="col-sm-9">
 				<h3>
@@ -92,7 +92,7 @@
 				</p>
 			</div>
 			<div class="col-sm-3">
-				<img class="img-fluid rounded" src="logo.jpg">
+				<img class="img-fluid rounded" src="bursa_3.jpg">
 			</div>
 		</div>
 	</div>
@@ -100,7 +100,7 @@
 	<div class="icerik-kutusu container">
 		<div class="row">
 			<div class="col-sm-3">
-				<img class="img-fluid rounded" src="logo.jpg">
+				<img class="img-fluid rounded" src="bursa_1.jpg">
 			</div>
 			<div class="col-sm-9">
 				<h3>
@@ -134,7 +134,7 @@
 				</p>
 			</div>
 			<div class="col-sm-3">
-				<img class="img-fluid rounded" src="logo.jpg">
+				<img class="img-fluid rounded" src="ulucami_1.jpg">
 			</div>
 		</div>
 	</div>
@@ -143,13 +143,16 @@
 		<div id="carousel" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img src="logo.jpg" width="1100" height="500">
+				<img src="bursa_1.jpg" width="1100" height="500">
 			  </div>
 			  <div class="carousel-item">
-				<img src="logo.jpg" width="1100" height="500">
+				<img src="bursa_2.jpg" width="1100" height="500">
 			  </div>
 			  <div class="carousel-item">
-				<img src="logo.jpg" width="1100" height="500">
+				<img src="bursa_3.jpg" width="1100" height="500">
+			  </div>
+			  <div class="carousel-item">
+				<img src="bursa_4.png" width="1100" height="500">
 			  </div>
 			</div>
 			<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
