--- a/Proje/UluCami.html
+++ b/Proje/UluCami.html
@@ -52,7 +52,7 @@
 	<div class="icerik-kutusu container">
 		<div class="row">
 			<div class="col-sm-3">
-				<img class="img-fluid rounded" src="logo.jpg">
+				<img class="img-fluid rounded" src="ulucami_1.jpg">
 			</div>
 			<div class="col-sm-9">
 				<h3>
@@ -72,7 +72,43 @@
 		</div>
 	</div>
 
+	<div class="icerik-kutusu container">
+		<iframe src=
+		"https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3048.1301294704444!2d29.059748815388826!3d40
+		.18391737939288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14ca383f1ab219dd%3A0x26f1946c7d
+		131ee3!2sUlu%20Cami!5e0!3m2!1str!2str!4v1589135545936!5m2!1str!2str" width="1100" height="500" 
+		frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+	</div>
 
+	<div class="icerik-kutusu container">
+		<div id="carousel" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+			  <div class="carousel-item active">
+				<img src="ulucami_1.jpg" width="1100" height="500">
+			  </div>
+			  <div class="carousel-item">
+				<img src="ulucami_2.jpg" width="1100" height="500">
+			  </div>
+			  <div class="carousel-item">
+				<img src="ulucami_3.jpg" width="1100" height="500">
+			  </div> 
+			  <div class="carousel-item">
+				<img src="ulucami_4.jpg" width="1100" height="500">
+			  </div>
+			  <div class="carousel-item">
+				<img src="ulucami_5.jpg" width="1100" height="500">
+			  </div>
+			</div>
+			<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Next</span>
+			</a>
+		  </div>
+	</div>
 
 	<div class="text-center" style="margin-bottom: 0;">© 2019-2020 Furkan CEBAR</div>
 </body>
